fix: tooltip not showing when close to table head

--- a/packages/pluggableWidgets/tooltip-web/src/ui/Tooltip.scss
+++ b/packages/pluggableWidgets/tooltip-web/src/ui/Tooltip.scss
@@ -35,7 +35,7 @@
         border-radius: 3px;
         background-color: white;
         padding: 6px;
-        z-index: 1;
+        z-index: 50;
         white-space: break-spaces;
         word-break: break-word;
     }
